--- a/stylesheets/components/_footer-privacy.css
+++ b/stylesheets/components/_footer-privacy.css
@@ -1,32 +1,40 @@
 .footer-privacy {
     display: flex;
-    flex-wrap: wrap;
-    padding: 1rem 0;
+    flex-direction: column;
 }
 
 .footer-privacy__item a {
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    display: inline-block;
     color: rgba(255,255,255,.7);
-    line-height: 1.3rem;
     text-decoration: none;
+    margin-bottom: 1rem;
 }
 
-.footer-privacy__item:not(:last-child)::after{
-    display: inline-block;
-    width: 1px;
-    height: 0.8rem;
-    margin-right: 0.5rem;
-    margin-left: 0.5rem;
-    background-color: #ffffff;
-    content: "";
+
+/* Tablet */
+
+@media (min-width: 575px) {
+
+    .footer-privacy {
+        flex-direction: row;
+    }
+
+    .footer-privacy__item + .footer-privacy__item::before{
+        display: inline-block;
+        width: 1px;
+        height: 0.8rem;
+        margin-right: 0.5rem;
+        margin-left: 0.5rem;
+        background-color: #ffffff;
+        content: "";
+    }
 }
 
 /* Desktop */
 
-@media (min-width: 992px) {
+@media (min-width: 1030px) {
 
     .footer-privacy {
-        margin-left: 50%;
+        width: 48%;
     }
 }
