--- a/stylesheets/components/_footer-social.css
+++ b/stylesheets/components/_footer-social.css
@@ -1,7 +1,6 @@
 .footer-social {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 0.5rem;
     margin-left: -0.5rem;
 }
 
@@ -9,6 +8,6 @@
     display: block;
     width: 2rem;
     height: 2rem;
-    margin-bottom: 0.25rem;
-    padding: 0.5rem;
+    margin: 0.25rem;
+    padding: 0.25rem;
 }
