--- a/stylesheets/components/_nav-item.css
+++ b/stylesheets/components/_nav-item.css
@@ -1,8 +1,10 @@
 
 .nav-item {
     display: inline-block;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    line-height: 1.3rem;
+    padding-top: 0.35rem;
+    padding-bottom: 0.35rem;
+    margin-top: 0.15rem;
+    margin-bottom: 0.15rem;
+    line-height: 1.4rem;
     text-decoration: none;
 }
